solo falla en las 4 letras

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
   padding: 2rem;
   text-align: center;
   height: 100vh;
+  display: flex;
+  justify-content: center;
 }
 .App {
   height: 100vh;
@@ -43,10 +45,13 @@ p {
   color: #6d3916;
 }
 .contenedor {
-  width: 80%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
+  background-color: blanchedalmond;
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 }
 .cosas {
   height: 15%;
@@ -64,15 +69,23 @@ p {
   height: auto;
 }
 .datos {
-  height: 5%;
+  height: 25%;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 .intentos {
-  width: 50%;
+  background-color: #a26924;
+  color: #d7cfc0;
+  width: 40%;
+  border-radius: 5px;
 }
 .letrasincorrectas {
+  background-color: #a26924;
+  color: #d7cfc0;
   width: 50%;
+  max-width: 50%;
+  border-radius: 5px;
 }
 button {
   background-color: #a26924;
@@ -116,5 +129,12 @@ input[type="text"]:focus {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
+}
+.cosasimagen {
+  height: 30%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
   align-items: center;
 }
