--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body {
   place-items: center;
   min-width: 320px;
   max-height: 100vh;
-  background-color: #d7cfc0;
+  background-color: bisque;
 }
 h1 {
   color: #39550e;
