--- a/src/App.css
+++ b/src/App.css
@@ -137,3 +137,22 @@ input[type="text"]:focus {
   justify-content: center;
   align-items: center;
 }
+.botonjugar {
+  background-color: #a26924;
+  border: none;
+  color: white;
+  padding: 12px 24px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 10px;
+  transition-duration: 0.4s;
+  height: 30%;
+}
+.botonjugar:hover {
+  background-color: #6d3916;
+  color: white;
+}
